--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -18,12 +18,19 @@
   "button_text": "Go to app",
   "contact_us": "Contact us",
   "your_profile_text": "Your profile",
-  
-  "password_placeholder": "Password", 
+
+  "password_placeholder": "Password",
   "password": "Please enter your password to access the site",
   "wrong_password": "Wrong password",
   "submit": "Submit",
 
   "dark": "Dark",
-  "light": "Light"
+  "light": "Light",
+
+  "cookie_banner_header": "We value your privacy",
+  "cookie_banner_text": "This website uses cookies to enhance and secure your browsing experience. By using our website, you agree to our Cookie Policy.",
+  "accept_all_cookies": "Accept all",
+  "reject_all_cookies": "Reject all",
+  "accept_necessary_cookies": "Accept only necessary",
+  "save": "Save"
 }
