--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -24,5 +24,12 @@
   "submit": "Отправить",
 
   "dark": "Темный",
-  "light": "Светлый"
+  "light": "Светлый",
+
+  "cookie_banner_header": "Мы ценим вашу конфиденциальность",
+  "cookie_banner_text": "Этот веб-сайт использует файлы cookie для улучшения и обеспечения безопасности вашего просмотра. Используя наш веб-сайт, вы соглашаетесь с нашей Политикой использования файлов cookie.",
+  "accept_all_cookies": "Принять все",
+  "reject_all_cookies": "Отклонить все",
+  "accept_necessary_cookies": "Принять только необходимые",
+  "save": "Сохранить"
 }
