--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -650,32 +650,48 @@
       "number_of_more_options": "тағы {{count}}"
     },
     "organizations": {
-      "in_person_interaction": "Жеке кездесуде",
+      "in_person_interaction": "Жеке",
       "online_interaction": "Онлайн",
       "phone_interaction": "Телефон арқылы",
-      "hybrid_interaction": "Аралас",
+      "hybrid_interaction": "Аралас формат",
 
       "free_services": "Тегін қызметтер",
       "paid_services": "Ақылы қызметтер",
-      "co_payment_services": "Қосымша төлемі бар қызметтер",
+      "co_payment_services": "Бірлесіп төленетін қызметтер",
       "cnas_reimbursed_services": "CNAS өтейтін қызметтер",
 
       "violence_victim_helpline": "Зорлық-зомбылық құрбандарына арналған сенім телефоны",
-      "individual_psychotherapy": "Жеке психотерапия",
       "social_information_counseling": "Әлеуметтік ақпарат және кеңес беру",
-      "rehab_psycho_neuro_children": "Психоневромоторлық бұзылыстары бар балаларды оңалту және қалпына келтіру қызметтері",
+      "rehab_psycho_neuro_children": "Психо-невро-моторлық бұзылыстары бар балаларға арналған оңалту және қалпына келтіру қызметтері",
       "individual_psychological_counseling": "Жеке психологиялық кеңес беру",
       "personal_development_counseling": "Жеке даму бойынша кеңес беру",
       "child_helpline": "Балаларға арналған сенім телефоны",
-      "speech_therapy": "Логопедия",
-      "suicide_prevention_helpline": "Суицидтің алдын алу сенім телефоны",
+      "suicide_prevention_helpline": "Өз-өзіне қол жұмсаудың алдын алу сенім телефоны",
       "child_psychiatry": "Балалар психиатриясы",
       "group_psychological_counseling": "Топтық психологиялық кеңес беру",
-      "sport_recreational_activities": "Спорттық демалыс шаралары (спорт, ойындар, би)",
-      "rehab_autism_children": "Аутизмі бар балаларды оңалту және қалпына келтіру қызметтері",
-      "art_recreational_activities": "Шығармашылық демалыс шаралары (театр, музыка, поэзия, сурет салу, ертегі айту)",
-      "addiction_helpline": "Тәуелділік бойынша сенім телефоны",
+      "sport_recreational_activities": "Спорттық-ойын-сауық іс-шаралары (спорт, ойындар, би)",
+      "rehab_autism_children": "Аутизмі бар балаларға арналған оңалту және қалпына келтіру қызметтері",
+      "art_recreational_activities": "Шығармашылық-ойын-сауық іс-шаралары (театр, музыка, поэзия, сурет салу, әңгімелеу)",
+      "addiction_helpline": "Тәуелділік мәселелері бойынша сенім телефоны",
+
+      "emergency_situations": "Төтенше жағдайлар",
+      "pediatric_psychiatry": "Педиатриялық психиатрия",
+      "psychological_evaluation": "Психологиялық бағалау",
+      "psychological_counseling": "Психологиялық кеңес беру",
+      "individual_psychotherapy": "Жеке психотерапия",
       "group_psychotherapy": "Топтық психотерапия",
+      "support_groups": "Қолдау топтары",
+      "social_assistance_and_counseling": "Әлеуметтік көмек және кеңес беру",
+      "personal_development": "Жеке даму",
+      "vocational_counseling_and_career_guidance": "Кәсіби кеңес беру және мансапты жоспарлау",
+      "speech_therapy": "Сөйлеу терапиясы",
+      "occupational_therapy_ergotherapy": "Еңбек терапиясы/Эрготерапия",
+      "physiotherapy_physical_recovery": "Физиотерапия/Физикалық қалпына келтіру",
+      "autism_spectrum_disorder_therapies": "Аутизм спектрі бұзылыстары бойынша терапиялар",
+      "disability_assessment": "Мүгедектікті анықтау",
+      "pediatric_neurology": "Балалар неврологиясы",
+      "special_psychopedagogy": "Арнайы психопедагогика",
+      "neuropsychomotor_recovery": "Нейропсихомоторлық қалпына келтіру",
 
       "sector_1": "1-сектор",
       "sector_2": "2-сектор",
@@ -684,14 +700,14 @@
       "sector_5": "5-сектор",
       "sector_6": "6-сектор",
 
-      "aggression_violence_victim_or_aggressor": "Агрессия/зорлық-зомбылық – жәбірленуші немесе агрессор",
+      "aggression_violence_victim_or_aggressor": "Агрессия/зорлық-зомбылық – құрбан немесе агрессор",
       "learning_difficulties_special_educational_needs": "Оқу қиындықтары/Арнайы білім беру қажеттіліктері",
-      "behavioral_disorder": "Мінез-құлық бұзылысы",
-      "eating_disorder": "Тамақтану бұзылысы",
-      "suicide_self_harm": "Суицид/Өзіне зиян келтіру",
+      "behavioral_disorder": "Мінез-құлық бұзылыстары",
+      "eating_disorder": "Тамақтану бұзылыстары",
+      "suicide_self_harm": "Өз-өзіне қол жұмсау/Өзін-өзі жарақаттау",
       "addiction": "Тәуелділік",
-      "identity_issues": "Сәйкестік мәселелері",
-      "illness_oncological_treatment_chronic_diseases": "Ауру (онкологиялық емдеу, созылмалы аурулар)",
+      "identity_issues": "Жеке тұлға мәселелері",
+      "illness_oncological_treatment_chronic_diseases": "Ауру (онкологиялық ем, созылмалы аурулар)",
       "other_situations": "Басқа жағдайлар",
 
       "public": "Мемлекеттік",
@@ -699,21 +715,21 @@
       "ong": "ҮЕҰ",
       "public_private": "Мемлекеттік-жеке",
 
-      "work_with_placeholder": "Жұмыс санаттарын таңдаңыз",
-      "specialisations_placeholder": "Ұсынылатын қызметтерді таңдаңыз",
+      "work_with_placeholder": "Мақсатты санаттарды таңдаңыз",
+      "specialisations_placeholder": "Көрсетілетін қызметтерді таңдаңыз",
       "district_placeholder": "Секторды таңдаңыз",
       "payment_methods_placeholder": "Төлем әдістерін таңдаңыз",
-      "user_interactions_placeholder": "Өзара әрекеттесу режимдерін таңдаңыз",
-      "property_types_placeholder": "Меншік түрлерін таңдаңыз",
+      "user_interactions_placeholder": "Өзара әрекет форматын таңдаңыз",
+      "property_types_placeholder": "Мекеме түрлерін таңдаңыз",
       "search_placeholder": "Ұйым атауы бойынша іздеу",
 
       "no_data_found": "Деректер табылмады",
-      "reset_filters": "Фильтрлерді қалпына келтіру",
+      "reset_filters": "Сүзгілерді қалпына келтіру",
 
-      "view_organization_details": "Ұйым туралы ақпаратты көру",
+      "view_organization_details": "Ұйым мәліметтерін көру",
       "address": "Мекенжай",
       "phone": "Телефон",
-      "email": "Электрондық пошта"
+      "email": "E-mail"
     },
     "organization-overview": {
       "error_loading_data": "Ұйым деректерін жүктеу кезінде қате орын алды",
