--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -661,20 +661,20 @@
       "co_payment_services": "Usługi z dopłatą",
       "cnas_reimbursed_services": "Usługi refundowane przez CNAS",
 
-      "emergency_situations": "Sytuacje awaryjne",
+      "emergency_situations": "Stany nagłe",
       "pediatric_psychiatry": "Psychiatria dziecięca",
       "psychological_evaluation": "Ocena psychologiczna",
-      "psychological_counseling": "Doradztwo psychologiczne",
+      "psychological_counseling": "Poradnictwo psychologiczne",
       "individual_psychotherapy": "Psychoterapia indywidualna",
       "group_psychotherapy": "Psychoterapia grupowa",
       "support_groups": "Grupy wsparcia",
-      "social_assistance_and_counseling": "Pomoc społeczna i doradztwo",
+      "social_assistance_and_counseling": "Pomoc społeczna i poradnictwo",
       "personal_development": "Rozwój osobisty",
-      "vocational_counseling_and_career_guidance": "Doradztwo zawodowe i kariery",
+      "vocational_counseling_and_career_guidance": "Poradnictwo zawodowe i doradztwo kariery",
       "speech_therapy": "Logopedia",
-      "occupational_therapy_ergotherapy": "Terapia zajęciowa/Ergoterapia",
-      "physiotherapy_physical_recovery": "Fizjoterapia/Rehabilitacja fizyczna",
-      "autism_spectrum_disorder_therapies": "Terapie zaburzeń spektrum autyzmu",
+      "occupational_therapy_ergotherapy": "Terapia zajęciowa/ergoterapia",
+      "physiotherapy_physical_recovery": "Fizjoterapia/rehabilitacja",
+      "autism_spectrum_disorder_therapies": "Terapie zaburzeń ze spektrum autyzmu",
       "disability_assessment": "Ocena niepełnosprawności",
       "pediatric_neurology": "Neurologia dziecięca",
       "special_psychopedagogy": "Psychopedagogika specjalna",
